--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,18 @@ djongo==1.3.4
 pymongo==3.11.3
 pytz==2021.1
 sqlparse==0.2.4
+asgiref==3.3.4
+Django==3.0.5
+djongo==1.3.4
+dnspython==2.1.0
+pymongo==3.11.3
+pytz==2021.1
+sqlparse==0.2.4
+asgiref==3.3.4
+Django==3.0.5
+djongo==1.3.4
+dnspython==2.1.0
+pymongo==3.11.3
+python-dotenv==0.17.1
+pytz==2021.1
+sqlparse==0.2.4
