--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,14 @@ pymongo==3.11.3
 python-dotenv==0.17.1
 pytz==2021.1
 sqlparse==0.2.4
+asgiref==3.3.4
+Django==3.0.5
+django-filter==2.4.0
+djangorestframework==3.12.4
+djongo==1.3.4
+dnspython==2.1.0
+Markdown==3.3.4
+pymongo==3.11.3
+python-dotenv==0.17.1
+pytz==2021.1
+sqlparse==0.2.4
