--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-rest-auth==0.9.5
 djangorestframework==3.12.4
 djongo==1.3.4
 dnspython==2.1.0
+drf-psq==1.1.0
 idna==2.10
 Markdown==3.3.4
 oauthlib==3.1.0
